fix: body overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #0b0f1c;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 code {
